<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudSense</string>
    <string name="title">List of Parameters</string>
    
    <!-- facebook id -->
    <string name="applicationId">310126352440918</string> 
    
    <string name="start_text">Click on the parameters on the left</string>
    
    
    <!-- Login activity -->
    <string name="login_button_name">Login using facebook</string>
    
   
    
    <!-- detailed feedback  -->
    <string name="feedback_title">I feel</string>
    <string name="submit_button">Submit</string>
    <string name="feedback_hint">pick adjectives</string>
    <string name="feedback_tablet_hint">pick adjectives from below</string>
    
    <string name="button2">OK</string>
    <string name="button3">Cold</string>
    <string name="button9">Warm</string>
    
    <string name="button1">Bright</string>
    <string name="button4">Dark</string>
    
    <string name="button5">Fresh</string>
    <string name="button6">Smelly</string>
    <string name="button10">Fluffy</string>
    
    <string name="button7">Cozy</string>
    <string name="button8">Annoyed</string>
    <string name="button11">Cheerless</string>
    
    <string name="temprature">Temperature</string>
    <string name="luminance">Luminance</string>
    <string name="air_quality">Air Quality</string>
    <string name="space">Space</string>
    
    <!-- Simple feedback -->
    <string name="simple_feedback_title">How do you feel about the indoor climate?</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="more">More</string>
    <string name="submit">Submit</string>
    <string name="initial_value">5</string>
    
    <!-- Failure report -->
    <string name="submit_failure_report">Report</string>
    <string name="title_failure_report">Report faults from below.</string>
    
    <!-- indoor map  -->
     <string name="transparency">Transparency</string>
    
    
    
     <!-- Menu Settings
     	  The map transparency seekbar should probably be better part of
     	  the menu settings.
      -->

     
    <string name="menu_settings">Settings</string>

</resources>